--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "substance-texture",
-  "version": "3.0.1-preview-5-NeuroBehav",
+  "version": "3.0.1-NeuroBehav-6",
   "author": {
     "name": "Substance",
     "email": "info@substance.io"
